@@ -1,18 +1,13 @@
 package es.usc.etse.grupo34.entidades;
 
-/**
- * Entidad de dominio para la HU-02.
- *
- * Si tu proyecto usa paquetes, añade aquí el package correspondiente.
- */
 public class Producto {
 
     private final Long id;
     private final String nombre;
-    private double precio;
+    private Double precio;
     private final String categoria;
 
-    public Producto(Long id, String nombre, double precio, String categoria) {
+    public Producto(Long id, String nombre, Double precio, String categoria) {
         this.id = validarId(id);
         this.nombre = validarTexto(nombre, "nombre");
         this.precio = validarPrecio(precio);
@@ -27,7 +22,7 @@ public class Producto {
         return nombre;
     }
 
-    public double getPrecio() {
+    public Double getPrecio() {
         return precio;
     }
 
@@ -35,27 +30,27 @@ public class Producto {
         return categoria;
     }
 
-    public void setPrecio(double precio) {
+    public void setPrecio(Double precio) {
         this.precio = validarPrecio(precio);
     }
 
     private static Long validarId(Long id) {
         if (id == null) {
-            throw new IllegalArgumentException("El id del producto no puede ser nulo");
+            throw new IllegalArgumentException("El id no puede ser nulo");
         }
         return id;
     }
 
     private static String validarTexto(String texto, String campo) {
-        if (texto == null || texto.trim().isEmpty()) {
-            throw new IllegalArgumentException("El " + campo + " del producto no puede estar vacio");
+        if (texto == null || texto.isBlank()) {
+            throw new IllegalArgumentException("El " + campo + " no puede estar vacio");
         }
         return texto.trim();
     }
 
-    private static double validarPrecio(double precio) {
-        if (Double.isNaN(precio) || Double.isInfinite(precio) || precio <= 0) {
-            throw new IllegalArgumentException("El precio del producto debe ser estrictamente positivo");
+    private static Double validarPrecio(Double precio) {
+        if (precio == null || Double.isNaN(precio) || Double.isInfinite(precio) || precio <= 0) {
+            throw new IllegalArgumentException("El precio debe ser mayor que cero");
         }
         return precio;
     }
